--- a/src/fonts/fontello-9a214eac/demo.html
+++ b/src/fonts/fontello-9a214eac/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'devjobs';
-      src: url('./font/devjobs.eot?77925464');
-      src: url('./font/devjobs.eot?77925464#iefix') format('embedded-opentype'),
-           url('./font/devjobs.woff?77925464') format('woff'),
-           url('./font/devjobs.ttf?77925464') format('truetype'),
-           url('./font/devjobs.svg?77925464#devjobs') format('svg');
+      src: url('./font/devjobs.eot?18883112');
+      src: url('./font/devjobs.eot?18883112#iefix') format('embedded-opentype'),
+           url('./font/devjobs.woff?18883112') format('woff'),
+           url('./font/devjobs.ttf?18883112') format('truetype'),
+           url('./font/devjobs.svg?18883112#devjobs') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -213,6 +213,12 @@
       <div class="row">
         <div class="span3" title="Code: 0xe800">
           <i class="demo-icon icon-path-2-(stroke)">&#xe800;</i> <span class="i-name">icon-path-2-(stroke)</span><span class="i-code">0xe800</span>
+        </div>
+        <div class="span3" title="Code: 0xe801">
+          <i class="demo-icon icon-moon">&#xe801;</i> <span class="i-name">icon-moon</span><span class="i-code">0xe801</span>
+        </div>
+        <div class="span3" title="Code: 0xe802">
+          <i class="demo-icon icon-sun">&#xe802;</i> <span class="i-name">icon-sun</span><span class="i-code">0xe802</span>
         </div>
       </div>
     </div>
